<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginTop="10.0dip"
            android:src="@drawable/left_arrow_black" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:gravity="center_horizontal"
            android:text="@string/signup_now"
            android:textColor="@color/black"
            android:textSize="26.0sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/login_title"
            android:layout_marginLeft="30.0dip"
            android:layout_marginTop="30.0dip"
            android:layout_marginRight="30.0dip"
            android:layout_marginBottom="40.0dip"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20.0dip"
            app:cardElevation="4.0dip">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10.0dip">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textColor="#ffff4081"
                        android:textSize="@dimen/text_14sp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_4"
                        android:hint="@string/title" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_4">

                        <EditText
                            android:id="@+id/edt_name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textEmailAddress"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="@dimen/dimen_50"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_code"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16.0dip"
                                android:hint="@string/code"
                                android:inputType="number"
                                android:maxLength="2"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_mobile"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16.0dip"
                                android:hint="@string/mobile_number"
                                android:inputType="number"
                                android:maxLength="10"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_email"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16.0dip"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_address"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16.0dip"
                            android:hint="@string/address"
                            android:inputType="text"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_city"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16.0dip"
                            android:hint="@string/city"
                            android:inputType="text"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_pincode"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16.0dip"
                            android:hint="@string/pincode"
                            android:inputType="text"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/edt_password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16.0dip"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22.0dip"
                        android:background="@drawable/btn_shape_round"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textColor="#ffffffff"
                        android:onClick="registerUser"
                        android:textSize="18.0sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10.0dip"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/already_member"
                            android:textSize="14.0sp" />

                        <TextView
                            android:id="@+id/txt_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10.0dip"
                            android:text="@string/login_now"
                            android:textColor="@color/blue"
                            android:textSize="16.0sp" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</layout>
