<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/bottom_bar_height"
    android:background="@color/white"
    android:id="@+id/bottom_navigation"
    android:fadingEdgeLength="4.0dip"
    android:orientation="horizontal"
    android:paddingTop="2.0dip"
    android:weightSum="4.0">

    <LinearLayout
        android:id="@+id/homeP"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@id/home"
            android:layout_width="24.0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:src="@drawable/ic_home" />

        <TextView
            android:id="@+id/homeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4.0dip"
            android:text="@string/home"
            android:textColor="@color/txtblack"
            android:textSize="12.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/destinaionP"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30.0dip"
            android:gravity="center"
            android:id="@+id/desination">

            <ImageView

                android:layout_width="24.0dip"
                android:layout_height="24.0dip"
                android:src="@drawable/ic_destination" />
        </LinearLayout>

        <TextView
            android:id="@+id/destinationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:text="Destination"
            android:textColor="@color/txtblack"
            android:textSize="12.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tripP"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/setting"
            android:layout_width="24.0dip"
            android:layout_height="24.0dip"
            android:layout_marginTop="2.0dip"
            android:src="@drawable/ic_trip" />

        <TextView
            android:id="@+id/settingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4.0dip"
            android:text="@string/trip"
            android:textColor="@color/txtblack"
            android:textSize="12.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/response"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_response"
            android:layout_width="24.0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:src="@drawable/ic_user" />

        <TextView
            android:id="@+id/txt_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4.0dip"
            android:text="@string/profile"
            android:textColor="@color/txtblack"
            android:textSize="12.0sp" />
    </LinearLayout>
</LinearLayout>